--- a/hype/08-piezo-element/piezo-element.hype/data.plist
+++ b/hype/08-piezo-element/piezo-element.hype/data.plist
@@ -77,7 +77,7 @@
 
 	</string>
 	<key>lastCheckDate</key>
-	<date>2014-03-19T00:26:17Z</date>
+	<date>2014-03-19T00:37:59Z</date>
 	<key>layout</key>
 	<dict>
 		<key>keyframeTimelineHeight</key>
@@ -6188,9 +6188,7 @@
 			<key>scrollViewOffset</key>
 			<string>{0, 0}</string>
 			<key>selectedObjects</key>
-			<array>
-				<string>163</string>
-			</array>
+			<array/>
 			<key>splitHeight</key>
 			<real>724</real>
 		</dict>
